--- a/app/templates/employee/today.html
+++ b/app/templates/employee/today.html
@@ -4,7 +4,7 @@
   <section class="card today-card">
     <h1>Today</h1>
     <p class="muted">{{ employee.name }}</p>
-    <p><a href="{{ url_for('employee.presence_control') }}">Ir a Control de presencia</a></p>
+    <p><a href="{{ url_for('employee.presence_control') }}">Ir a Historial</a></p>
     {% include "employee/_punch_state.html" %}
   </section>
 {% endblock %}
